--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,15 @@
 /.settings/
 /.classpath
 /.project
+
+/.idea/compiler.xml
+/.idea/encodings.xml
+/.idea/libraries/Maven__junit_junit_4_12.xml
+/.idea/libraries/Maven__org_apache_commons_commons_lang3_3_1.xml
+/.idea/libraries/Maven__org_hamcrest_hamcrest_all_1_3.xml
+/.idea/libraries/Maven__org_hamcrest_hamcrest_core_1_3.xml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/vcs.xml
+/.idea/workspace.xml
+/lab1_1.iml
